--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'header';
 @import 'main';
 @import 'aboutMe';
+@import 'projects';
 
 * {
     margin: 0;
@@ -105,87 +106,6 @@ body {
     color: #FFF;
 }
 
-.projects {
-    font-size: 16px;
-    min-height: calc(100vh - 60px);
-    color: #FFF;
-
-    &__item {
-        margin: 2em 0;
-
-        &__image {
-
-            height: 22em;
-
-            &.sportshop {
-                background: url('../asetts/sportshop.png');
-                background-size: contain;
-                background-position: center;
-                background-repeat: no-repeat;
-            }
-
-            &.simonDice {
-                background: url('../asetts/simonDice.jpeg');
-                background-size: contain;
-                background-position: center;
-                background-repeat: no-repeat;
-            }
-
-            &.utilitiesApp {
-                background: url('../asetts/utilitiesApp.png');
-                background-size: contain;
-                background-position: center;
-                background-repeat: no-repeat;
-            }
-
-        }
-
-        &__description {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 1em 2em;
-
-            &__title {
-                font-size: 2em;
-                font-family: 'Ubuntu', sans-serif;
-                margin-top: 1em;
-            }
-
-            &__comment {
-                font-family: 'Nanum Gothic', sans-serif;
-                font-style: oblique;
-                font-size: 1.1em;
-                text-align: center;
-            }
-
-            &__container {
-                display: flex;
-                width: 100%;
-                justify-content: space-evenly;
-
-                &__button {
-                    text-decoration: none;
-                    font-family: 'Ubuntu', sans-serif;
-                    color: #ffa724;
-                    font-size: 1.2em;
-                    padding: .3em 2.5em;
-                    border: 2px solid #e08f15;
-                    border-radius: 20px;
-                    transition: .5s ease all;
-
-                    &:hover {
-                        color: #FFF;
-                        background-color: #e08f15;
-                    }
-                }
-            }
-
-        }
-    }
-}
-
 /* FOOTER */
 .footer {
     width: 100%;
@@ -225,68 +145,6 @@ body {
         padding: 0 15px;
     }
 
-    .presentation {
-        font-size: 15px;
-        padding: 2em 0;
-        min-height: 50vh;
-
-        &__description {
-            &__title {
-                & p {
-                    font-size: 1.7em;
-                }
-
-                & h1 {
-                    font-size: 3.1em;
-                }
-            }
-
-            &__subTitle {
-                margin: .2em auto;
-
-                & h2 {
-                    font-size: 1.2em;
-                    text-align: center;
-                }
-            }
-        }
-
-        &__img {
-            height: 22em;
-            margin: 0;
-        }
-    }
-
-    .aboutMe {
-        font-size: 14px;
-        min-height: 50vh;
-
-        &__title {
-            margin-top: .4em;
-        }
-
-        &__text {
-            padding: 0 .5em;
-        }
-
-        &__skills {
-            &__container {
-                grid-template-columns: 1fr 1fr;
-
-                &__logo {
-                    & img {
-                        width: 8em;
-                    }
-
-                    &__description {
-                        font-size: 0.95em;
-                    }
-                }
-            }
-
-        }
-    }
-
     .projects {
         font-size: 14px;
 
@@ -316,89 +174,12 @@ body {
         padding: 0 30px;
     }
 
-    .presentation {
-        font-size: 16px;
-        min-height: 75vh;
-        padding: 2em 0;
-
-        &__img {
-            height: 22em;
-        }
-    }
-
-    .aboutMe {
-        font-size: 15px;
-
-        &__title {
-            margin-top: .4em;
-        }
-
-        &__skills {
-            &__container {
-                grid-template-columns: repeat(3, 1fr);
-
-                &__logo {
-                    & img {
-                        width: 7em;
-                    }
-
-                    &__description {
-                        font-size: 0.95em;
-                    }
-                }
-            }
-        }
-    }
-
     .footer {
         font-size: 14px;
     }
 }
 
 @media only screen and (min-width:768px) and (max-width:992px) {
-    .presentation {
-        font-size: 15px;
-        min-height: 60vh;
-
-        &__img {
-            height: 20em;
-        }
-
-        &__description {
-
-            &__title {
-                & h1 {
-                    font-size: 4em;
-                }
-
-            }
-        }
-    }
-
-    .aboutMe {
-        font-size: 15px;
-
-        &__title {
-            margin-top: .4em;
-        }
-
-        &__skills {
-            &__container {
-                grid-template-columns: repeat(3, 1fr);
-
-                &__logo {
-                    & img {
-                        width: 7.5em;
-                    }
-
-                    &__description {
-                        font-size: 0.95em;
-                    }
-                }
-            }
-
-        }
-    }
 
     .footer {
         font-size: 15px;
