--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@
   padding: 0;
 }
 .header__nav__categorys li a {
+  font-weight: 500;
   text-decoration: none;
   padding: 0.5em 1.2em;
   border-radius: 8px;
