modified animation script

--- a/css/style.css
+++ b/css/style.css
@@ -507,14 +507,17 @@ body {
 
 .mostrarDerecha {
   animation: mostrarDerecha 1s;
+  opacity: 1;
 }
 
 .mostrarArriba {
   animation: mostrarArriba 1s;
+  opacity: 1;
 }
 
 .mostrarAbajo {
   animation: mostrarAbajo 1s;
+  opacity: 1;
 }
 
 @keyframes mostrarDerecha {
