--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,7 @@ main .presentation__img img:hover {
     min-height: auto;
   }
   main .presentation {
-    width: 95%;
+    width: 90%;
     padding: 4em 0;
     gap: 1em;
   }
@@ -374,7 +374,7 @@ main .presentation__img img:hover {
 }
 @media only screen and (min-width: 768px) and (max-width: 992px) {
   .aboutMe__container {
-    width: 80%;
+    width: 90%;
     flex-direction: column;
     align-items: center;
     gap: 2em;
@@ -396,82 +396,184 @@ main .presentation__img img:hover {
   }
 }
 .projects {
-  font-size: 16px;
-  min-height: calc(100vh - 60px);
-  color: #FFF;
-  display: flex;
-  flex-direction: column;
+  font-size: 0.8rem;
+  font-family: "Roboto", sans-serif;
+  width: 100vw;
+  min-height: calc(100vh - 70px);
+  padding: 2em 0;
 }
-.projects__item {
-  margin: 2em 0;
-  padding-bottom: 1em;
+.projects h2 {
+  color: #fff;
+  text-align: center;
+  font-size: 1.7em;
+  letter-spacing: 1px;
 }
-.projects__item__image {
-  height: 22em;
-}
-.projects__item__image.sportshop {
-  background: url("../asetts/sportshop.png");
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-.projects__item__image.simonDice {
-  background: url("../asetts/simonDice.jpeg");
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-.projects__item__image.utilitiesApp {
-  background: url("../asetts/utilitiesApp.png");
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-.projects__item__image.musicShop {
-  background: url("../asetts/musicShop.png");
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-.projects__item__description {
+.projects-container {
+  width: 90%;
+  margin: 0 auto;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  padding: 1em 2em;
+  gap: 3em;
+  color: #fff;
+}
+.projects__item {
+  display: flex;
+  flex-direction: column;
   gap: 1em;
+  transition: 0.5s ease;
+  overflow: hidden;
+  border-radius: 10px;
+  padding-bottom: 1.5em;
 }
-.projects__item__description__title {
-  font-size: 2em;
-  font-family: "Ubuntu", sans-serif;
-  margin-top: 1em;
+.projects__item:hover {
+  background-color: #494d4e;
 }
-.projects__item__description__comment {
-  font-family: "Nanum Gothic", sans-serif;
-  font-style: oblique;
-  font-size: 1.1em;
+.projects__item img {
+  width: 100%;
+}
+.projects__item .imgLargeScreen {
+  display: none;
+}
+.projects__item__information {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.8em;
+}
+.projects__item__information h3 {
+  text-align: center;
+  font-size: 1.7em;
+  letter-spacing: 1px;
+  margin: 0;
+}
+.projects__item__information p {
+  font-size: 1.3em;
   text-align: center;
 }
-.projects__item__description__container {
+.projects__item__information__btns {
   display: flex;
-  width: 100%;
-  justify-content: space-evenly;
+  gap: 2em;
 }
-.projects__item__description__container__button {
+.projects__item__information__btns a {
   text-decoration: none;
-  font-family: "Ubuntu", sans-serif;
   color: #ffa724;
   font-size: 1.2em;
-  padding: 0.3em 2.5em;
-  border: 2px solid #e08f15;
+  font-weight: 600;
+  background: none;
+  padding: 0.3em 2em;
+  outline: 2px solid #e08f15;
   border-radius: 20px;
   transition: 0.5s ease all;
 }
-.projects__item__description__container__button:hover {
+.projects__item__information__btns a:hover {
   color: #FFF;
   background-color: #e08f15;
 }
 
+@media only screen and (min-width: 576px) and (max-width: 768px) {
+  .projects {
+    font-size: 0.9rem;
+  }
+  .projects-container {
+    width: 90%;
+    gap: 3em;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  .projects {
+    font-size: 1rem;
+  }
+  .projects-container {
+    width: 90%;
+    gap: 3em;
+  }
+  .projects__item {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0.4em;
+    width: 100%;
+    height: 270px;
+    padding-bottom: 0;
+  }
+  .projects__item img {
+    width: auto;
+    min-width: 370px;
+    max-width: 400px;
+    height: 270px;
+  }
+  .projects__item .imgResponsive {
+    display: none;
+  }
+  .projects__item .imgLargeScreen {
+    display: block;
+  }
+  .projects__item__information {
+    width: auto;
+    min-width: 300px;
+    max-width: 400px;
+    gap: 0.4em;
+  }
+  .projects__item__information p {
+    font-size: 1.2em;
+  }
+  .projects__item__information__btns {
+    gap: 1em;
+  }
+  .projects__item__information__btns a {
+    font-size: 1em;
+  }
+}
+@media only screen and (min-width: 993px) {
+  .projects {
+    font-size: 1rem;
+  }
+  .projects-container {
+    width: 80%;
+    gap: 3em;
+  }
+  .projects h2 {
+    margin-bottom: 0;
+  }
+  .projects__item {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 0;
+    width: 100%;
+    height: 340px;
+    padding-bottom: 0;
+  }
+  .projects__item img {
+    width: 50%;
+    min-width: 450px;
+    height: 340px;
+  }
+  .projects__item .imgResponsive {
+    display: none;
+  }
+  .projects__item .imgLargeScreen {
+    display: block;
+  }
+  .projects__item__information {
+    width: 50%;
+    padding: 0 1.2em;
+  }
+  .projects__item__information p {
+    font-size: 1.2em;
+  }
+  .projects__item__information__btns {
+    gap: 1em;
+  }
+  .projects__item__information__btns a {
+    font-size: 1em;
+  }
+}
 * {
   margin: 0;
   padding: 0;
