--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,78 +1,168 @@
+// .projects {
+//     font-size: 16px;
+//     min-height: calc(100vh - 60px);
+//     color: #FFF;
+//     display: flex;
+//     flex-direction: column;
+//     &__item {
+//         margin: 2em 0;
+//         padding-bottom: 1em;
+//         &__image {
+
+//             height: 22em;
+
+//             &.sportshop {
+//                 background: url('../asetts/sportshop.png');
+//                 background-size: contain;
+//                 background-position: center;
+//                 background-repeat: no-repeat;
+//             }
+
+//             &.simonDice {
+//                 background: url('../asetts/simonDice.jpeg');
+//                 background-size: contain;
+//                 background-position: center;
+//                 background-repeat: no-repeat;
+//             }
+
+//             &.utilitiesApp {
+//                 background: url('../asetts/utilitiesApp.png');
+//                 background-size: contain;
+//                 background-position: center;
+//                 background-repeat: no-repeat;
+//             }
+//             &.musicShop{
+//                 background: url('../asetts/musicShop.png');
+//                 background-size: contain;
+//                 background-position: center;
+//                 background-repeat: no-repeat;
+//             }
+
+//         }
+
+//         &__description {
+//             display: flex;
+//             flex-direction: column;
+//             align-items: center;
+//             justify-content: center;
+//             padding: 1em 2em;
+//             gap: 1em;
+
+//             &__title {
+//                 font-size: 2em;
+//                 font-family: 'Ubuntu', sans-serif;
+//                 margin-top: 1em;
+//             }
+
+//             &__comment {
+//                 font-family: 'Nanum Gothic', sans-serif;
+//                 font-style: oblique;
+//                 font-size: 1.1em;
+//                 text-align: center;
+//             }
+
+//             &__container {
+//                 display: flex;
+//                 width: 100%;
+//                 justify-content: space-evenly;
+
+//                 &__button {
+//                     text-decoration: none;
+//                     font-family: 'Ubuntu', sans-serif;
+//                     color: #ffa724;
+//                     font-size: 1.2em;
+//                     padding: .3em 2.5em;
+//                     border: 2px solid #e08f15;
+//                     border-radius: 20px;
+//                     transition: .5s ease all;
+
+//                     &:hover {
+//                         color: #FFF;
+//                         background-color: #e08f15;
+//                     }
+//                 }
+//             }
+
+//         }
+//     }
+// }
+
 .projects {
-    font-size: 16px;
-    min-height: calc(100vh - 60px);
-    color: #FFF;
-    display: flex;
-    flex-direction: column;
+    font-size: .8rem;
+    font-family: 'Roboto', sans-serif;
+    width: 100vw;
+    min-height: calc(100vh - 70px);
+    padding: 2em 0;
+
+    h2 {
+        color: #fff;
+        text-align: center;
+        font-size: 1.7em;
+        letter-spacing: 1px;
+    }
+
+    &-container {
+        width: 90%;
+        margin: 0 auto;
+        min-height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 3em;
+        color: #fff;
+    }
+
     &__item {
-        margin: 2em 0;
-        padding-bottom: 1em;
-        &__image {
-
-            height: 22em;
-
-            &.sportshop {
-                background: url('../asetts/sportshop.png');
-                background-size: contain;
-                background-position: center;
-                background-repeat: no-repeat;
-            }
-
-            &.simonDice {
-                background: url('../asetts/simonDice.jpeg');
-                background-size: contain;
-                background-position: center;
-                background-repeat: no-repeat;
-            }
-
-            &.utilitiesApp {
-                background: url('../asetts/utilitiesApp.png');
-                background-size: contain;
-                background-position: center;
-                background-repeat: no-repeat;
-            }
-            &.musicShop{
-                background: url('../asetts/musicShop.png');
-                background-size: contain;
-                background-position: center;
-                background-repeat: no-repeat;
-            }
-
+        display: flex;
+        flex-direction: column;
+        gap: 1em;
+        transition: .5s ease;
+        overflow: hidden;
+        border-radius: 10px;
+        padding-bottom: 1.5em;
+        &:hover{
+            background-color: #494d4e;
         }
 
-        &__description {
+        img {
+            width: 100%;
+        }
+
+        .imgLargeScreen {
+            display: none;
+        }
+
+        &__information {
+            width: 100%;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            padding: 1em 2em;
-            gap: 1em;
+            gap: .8em;
 
-            &__title {
-                font-size: 2em;
-                font-family: 'Ubuntu', sans-serif;
-                margin-top: 1em;
+            h3 {
+                text-align: center;
+                font-size: 1.7em;
+                letter-spacing: 1px;
+                margin: 0;
             }
 
-            &__comment {
-                font-family: 'Nanum Gothic', sans-serif;
-                font-style: oblique;
-                font-size: 1.1em;
+            p {
+                font-size: 1.3em;
                 text-align: center;
             }
 
-            &__container {
+            &__btns {
                 display: flex;
-                width: 100%;
-                justify-content: space-evenly;
+                gap: 2em;
 
-                &__button {
+                a {
                     text-decoration: none;
-                    font-family: 'Ubuntu', sans-serif;
                     color: #ffa724;
                     font-size: 1.2em;
-                    padding: .3em 2.5em;
-                    border: 2px solid #e08f15;
+                    font-weight: 600;
+                    background: none;
+                    padding: .3em 2em;
+                    outline: 2px solid #e08f15;
                     border-radius: 20px;
                     transition: .5s ease all;
 
@@ -83,6 +173,132 @@
                 }
             }
 
+        }
+    }
+}
+
+@media only screen and (min-width:576px) and (max-width:768px) {
+    .projects {
+        font-size: .9rem;
+
+        &-container {
+            width: 90%;
+            gap: 3em;
+        }
+    }
+}
+
+@media only screen and (min-width:768px) and (max-width:992px) {
+    .projects {
+        font-size: 1rem;
+
+        &-container {
+            width: 90%;
+            gap: 3em;
+        }
+
+        &__item {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            gap: .4em;
+            width: 100%;
+            height: 270px;
+            padding-bottom: 0;
+
+            img {
+                width: auto;
+                min-width: 370px;
+                max-width: 400px;
+                height: 270px;
+            }
+
+            .imgResponsive {
+                display: none;
+            }
+
+            .imgLargeScreen {
+                display: block;
+            }
+
+            &__information {
+                width: auto;
+                min-width: 300px;
+                max-width: 400px;
+                gap: .4em;
+                p {
+                    font-size: 1.2em;
+                }
+
+                &__btns {
+                    gap: 1em;
+
+                    a {
+                        font-size: 1em;
+                    }
+                }
+
+            }
+        }
+    }
+}
+
+@media only screen and (min-width:993px) {
+    .projects {
+        font-size: 1rem;
+
+        &-container {
+            width: 80%;
+            gap: 3em;
+        }
+
+        h2 {
+            margin-bottom: 0;
+        }
+
+        &__item {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            gap: 0;
+            width: 100%;
+            height: 340px;
+            padding-bottom: 0;
+
+            img {
+                width: 50%;
+                min-width: 450px;
+                height: 340px;
+
+            }
+
+            .imgResponsive {
+                display: none;
+            }
+
+            .imgLargeScreen {
+                display: block;
+            }
+
+            &__information {
+                width: 50%;
+                padding: 0 1.2em;
+
+                p {
+                    font-size: 1.2em;
+                }
+
+                &__btns {
+                    gap: 1em;
+
+                    a {
+                        font-size: 1em;
+                    }
+                }
+
+            }
         }
     }
 }
