--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
   background-color: transparent;
   color: #fff;
   transition: 0.6s ease all;
+  font-family: "Roboto", sans-serif;
 }
 .header__nav {
   width: 80%;
@@ -303,7 +304,7 @@ main .presentation__img img:hover {
 }
 .aboutMe__container__skills__box {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
   gap: 1.2em;
 }
@@ -315,7 +316,6 @@ main .presentation__img img:hover {
 .aboutMe__container__skills__box__item img:hover {
   transform: rotate(360deg);
   filter: drop-shadow(1px 1px 4px #dad6d6);
-  cursor: pointer;
 }
 .aboutMe__container__skills__box__item p {
   font-size: 0.9em;
@@ -427,9 +427,6 @@ main .presentation__img img:hover {
   border-radius: 10px;
   padding-bottom: 1.5em;
 }
-.projects__item:hover {
-  background-color: #494d4e;
-}
 .projects__item img {
   width: 100%;
 }
@@ -450,7 +447,7 @@ main .presentation__img img:hover {
   margin: 0;
 }
 .projects__item__information p {
-  font-size: 1.3em;
+  font-size: 1.4em;
   text-align: center;
 }
 .projects__item__information__btns {
@@ -500,6 +497,9 @@ main .presentation__img img:hover {
     height: 270px;
     padding-bottom: 0;
   }
+  .projects__item:hover {
+    background-color: #494d4e;
+  }
   .projects__item img {
     width: auto;
     min-width: 370px;
@@ -548,6 +548,9 @@ main .presentation__img img:hover {
     width: 100%;
     height: 340px;
     padding-bottom: 0;
+  }
+  .projects__item:hover {
+    background-color: #494d4e;
   }
   .projects__item img {
     width: 50%;
@@ -656,31 +659,21 @@ body {
     transform: translateY(0);
   }
 }
-.max-width {
-  padding: 0 80px;
-  margin: 0;
-}
-
-.sectionTitle {
-  margin: 0;
-  text-align: center;
-  padding-top: 1em;
-  color: #FFF;
-}
-
 /* FOOTER */
 .footer {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   background-color: #4D5050;
-  padding: 0.4em 0;
-  font-size: 16px;
+  gap: 0.5em;
+  min-height: 110px;
+  font-size: 1rem;
+  font-family: "Roboto", sans-serif;
 }
 .footer__info p {
-  font-family: "Ubuntu", sans-serif;
-  font-size: 1.4em;
+  font-size: 1.3em;
   color: #DCD8D8;
   margin: 0;
 }
@@ -689,50 +682,29 @@ body {
 }
 .footer__social__logo a i {
   margin: 0.1em 0.4em;
-  font-size: 2.5em;
+  font-size: 2.3em;
   color: #DCD8D8;
+  cursor: pointer;
+  transition: 0.5s ease;
 }
 .footer__social__logo a i:hover {
   filter: drop-shadow(1px 0px #DCD8D8);
-  cursor: pointer;
+  transform: scale(1.1);
 }
 
 @media only screen and (max-width: 575px) {
-  .max-width {
-    padding: 0 15px;
-  }
-
-  .projects {
-    font-size: 14px;
-  }
-  .projects__item {
-    margin: 0;
-  }
-  .projects__item__image {
-    background-position: bottom;
-    height: 18em;
-    padding: 0;
-  }
-  .projects__item__description {
-    padding: 1em;
-  }
-
   .footer {
-    font-size: 14px;
+    font-size: 0.8rem;
   }
 }
 @media only screen and (min-width: 576px) and (max-width: 767px) {
-  .max-width {
-    padding: 0 30px;
-  }
-
   .footer {
-    font-size: 14px;
+    font-size: 0.9rem;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 992px) {
   .footer {
-    font-size: 15px;
+    font-size: 0.9rem;
   }
 }
 
