--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -8,7 +8,7 @@
     background-color: transparent;
     color: #fff;
     transition: .6s ease all;
-
+    font-family: 'Roboto', sans-serif;
     &__nav {
         width: 80%;
         height: 100%;
