--- a/scss/style.scss
+++ b/scss/style.scss
@@ -61,7 +61,7 @@ body {
 }
 
 .mostrarAbajo {
-    animation: mostrarAbajo 1s; 
+    animation: mostrarAbajo 1s;
     opacity: 1;
 }
 
@@ -95,33 +95,21 @@ body {
     }
 }
 
-
-.max-width {
-    padding: 0 80px;
-    margin: 0;
-}
-
-
-.sectionTitle {
-    margin: 0;
-    text-align: center;
-    padding-top: 1em;
-    color: #FFF;
-}
-
 /* FOOTER */
 .footer {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background-color: #4D5050;
-    padding: .4em 0;
-    font-size: 16px;
+    gap: .5em;
+    min-height: 110px;
+    font-size: 1rem;
+    font-family: 'Roboto', sans-serif;
 
     &__info p {
-        font-family: 'Ubuntu', sans-serif;
-        font-size: 1.4em;
+        font-size: 1.3em;
         color: #DCD8D8;
         margin: 0;
     }
@@ -131,12 +119,13 @@ body {
 
         &__logo a i {
             margin: .1em .4em;
-            font-size: 2.5em;
+            font-size: 2.3em;
             color: #DCD8D8;
-
+            cursor: pointer;
+            transition: .5s ease;
             &:hover {
                 filter: drop-shadow(1px 0px #DCD8D8);
-                cursor: pointer;
+                transform: scale(1.1);
             }
         }
     }
@@ -144,47 +133,21 @@ body {
 
 
 @media only screen and (max-width:575px) {
-    .max-width {
-        padding: 0 15px;
-    }
-
-    .projects {
-        font-size: 14px;
-
-        &__item {
-            margin: 0;
-
-            &__image {
-                background-position: bottom;
-                height: 18em;
-                padding: 0;
-
-            }
-
-            &__description {
-                padding: 1em;
-            }
-        }
-    }
 
     .footer {
-        font-size: 14px;
+        font-size: .8rem;
     }
 }
 
 @media only screen and (min-width:576px) and (max-width:767px) {
-    .max-width {
-        padding: 0 30px;
-    }
-
     .footer {
-        font-size: 14px;
+        font-size: .9rem;
     }
 }
 
 @media only screen and (min-width:768px) and (max-width:992px) {
 
     .footer {
-        font-size: 15px;
+        font-size: .9rem;
     }
 }
