--- a/scss/_aboutMe.scss
+++ b/scss/_aboutMe.scss
@@ -1,14 +1,13 @@
 .aboutMe {
     font-size: 1rem;
     font-family: 'Roboto', sans-serif;
-    width: 100vw;
+    width: 80%;
+    max-width: 1200px;
     min-height: calc(100vh - 70px);
     color: #fff;
 
     &__container {
-        width: 80%;
-        height: 100%;
-        margin: 0 auto;
+        width: 100%;
         padding-top: 2em;
         display: flex;
         justify-content: space-between;
@@ -30,7 +29,7 @@
             &__item {
                 display: flex;
                 flex-direction: column;
-                gap: .8em;
+                gap: .9em;
 
                 p {
                     font-size: 1.3em;
@@ -43,8 +42,8 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            gap: 1.5em;
-            width: 300px;
+            gap: 1.2em;
+            width: 350px;
 
             &__box {
                 display: flex;
@@ -54,7 +53,7 @@
 
                 &__item {
                     & img {
-                        width: 80px;
+                        width: 100px;
                         height: auto;
                         transition: 1.7s ease all;
 
@@ -65,7 +64,7 @@
                     }
 
                     p {
-                        font-size: .9em;
+                        font-size: 1em;
                         font-weight: 400;
                         text-align: center;
                     }
@@ -80,14 +79,12 @@
         font-size: .85rem;
 
         &__container {
-            width: 90%;
             flex-direction: column;
             align-items: center;
             gap: 2em;
 
             &__information {
                 width: auto;
-
                 &__item {
                     p {
                         text-align: justify;
@@ -95,18 +92,22 @@
 
                 }
             }
-            &__skills{
-                &__box{
+
+            &__skills {
+                width: 100%;
+
+                &__box {
                     justify-content: space-around;
-                    &__item{
+
+                    &__item {
                         & img {
-                            width: 110px;
+                            width: 95px;
                         }
                     }
                 }
             }
 
-            
+
         }
     }
 }
@@ -116,7 +117,6 @@
         font-size: .9rem;
 
         &__container {
-            width: 90%;
             flex-direction: column;
             align-items: center;
             gap: 2em;
@@ -132,13 +132,15 @@
                 }
             }
 
-            &__skills{
-                width: 500px;
-                &__box{
+            &__skills {
+                width: 100%;
+
+                &__box {
                     justify-content: space-evenly;
-                    &__item{
+
+                    &__item {
                         & img {
-                            width: 100px;
+                            width: 110px;
                         }
                     }
                 }
@@ -146,10 +148,10 @@
         }
     }
 }
+
 @media only screen and (min-width:768px) and (max-width:992px) {
     .aboutMe {
         &__container {
-            width: 90%;
             flex-direction: column;
             align-items: center;
             gap: 2em;
@@ -165,11 +167,13 @@
                 }
             }
 
-            &__skills{
+            &__skills {
                 width: 600px;
-                &__box{
+
+                &__box {
                     justify-content: space-evenly;
-                    &__item{
+
+                    &__item {
                         & img {
                             width: 120px;
                         }
