--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,6 +33,11 @@ html {
 
 body {
     background-color: #393E41;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
 }
 
 .animado {
