--- a/scss/_aboutMe.scss
+++ b/scss/_aboutMe.scss
@@ -13,7 +13,7 @@
         justify-content: space-between;
 
         & h3 {
-            font-size: 1.8em;
+            font-size: 1.7em;
             font-weight: 500;
             letter-spacing: 1px;
             text-align: center;
@@ -32,7 +32,7 @@
                 gap: .9em;
 
                 p {
-                    font-size: 1.3em;
+                    font-size: 1.2em;
                 }
             }
         }
@@ -43,7 +43,7 @@
             justify-content: center;
             align-items: center;
             gap: 1.2em;
-            width: 350px;
+            width: 330px;
 
             &__box {
                 display: flex;
@@ -53,7 +53,7 @@
 
                 &__item {
                     & img {
-                        width: 100px;
+                        width: 90px;
                         height: auto;
                         transition: 1.7s ease all;
 
@@ -64,7 +64,7 @@
                     }
 
                     p {
-                        font-size: 1em;
+                        font-size: .9em;
                         font-weight: 400;
                         text-align: center;
                     }
