--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,19 +1,21 @@
 main {
     font-size: 1rem;
     font-family: 'Roboto', sans-serif;
-    width: 100vw;
+    width: 80%;
+    max-width: 1200px;
+
     min-height: calc(100vh - 60px);
 
     & .presentation {
-        width: 90%;
+        width: 100%;
         height: 100%;
         padding-top: 6em;
         margin: 0 auto;
         color: #e7e7e7;
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-around;
         align-items: flex-start;
-
+        gap: 1em;
         &__information {
             margin-top: 4em;
             display: flex;
@@ -52,7 +54,6 @@ main {
 
         &__img {
             height: 400px;
-
             & img {
                 height: 100%;
                 border-radius: 40px;
@@ -92,7 +93,7 @@ main {
 
                 &__titles {
                     p {
-                        font-size: 1.8em;
+                        font-size: 1.7em;
                         text-align: center;
                     }
 
