--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,9 +1,12 @@
 .projects {
-    font-size: .8rem;
+    font-size: 1rem;
     font-family: 'Roboto', sans-serif;
-    width: 100vw;
+    width: 80%;
+    max-width: 1200px;
     min-height: calc(100vh - 70px);
     padding: 2em 0;
+    display: flex;
+    justify-content: center;
 
     h2 {
         color: #fff;
@@ -13,28 +16,26 @@
     }
 
     &-container {
-        width: 90%;
-        margin: 0 auto;
-        min-height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 3em;
+        gap: 5em;
         color: #fff;
     }
 
     &__item {
+        width: 100%;
         display: flex;
-        flex-direction: column;
-        gap: 1em;
+        justify-content: space-between;
+        align-items: center;
+        gap: 1.5em;
         transition: .5s ease;
         overflow: hidden;
         border-radius: 10px;
-        padding-bottom: 1.5em;
-
+        padding: .2em 0;
 
         img {
-            width: 100%;
+            width: 50%;
         }
 
         .imgLargeScreen {
@@ -42,11 +43,11 @@
         }
 
         &__information {
-            width: 100%;
+            width: 500px;
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: .8em;
+            gap: 2em;
 
             h3 {
                 text-align: center;
@@ -56,7 +57,7 @@
             }
 
             p {
-                font-size: 1.4em;
+                font-size: 1.2em;
                 text-align: center;
             }
 
@@ -86,137 +87,170 @@
     }
 }
 
+@media only screen and (max-width:575px) {
+    .projects {
+        font-size: .9rem;
+
+        &-container {
+            gap: 3em;
+        }
+
+        &__item {
+            flex-direction: column;
+            
+            img {
+                width: 100%;
+            }
+            &__information{
+                width: 100%;
+                gap: 1.2em;
+                &__btns{
+                    // flex-direction: column;
+                    gap: 1em;
+                    a{
+                        width: 130px;
+                        text-align: center;
+                        padding: .5em .1em;
+                    }
+                }
+            }
+            p {
+                text-align: justify;
+            }
+            
+        }
+    }
+}
+
 @media only screen and (min-width:576px) and (max-width:768px) {
     .projects {
         font-size: .9rem;
 
         &-container {
-            width: 90%;
             gap: 3em;
+        }
+
+        &__item {
+            flex-direction: column;
+            
+            img {
+                width: 100%;
+            }
+            &__information{
+                width: 100%;
+                gap: 1.2em;
+                &__btns{
+                    // flex-direction: column;
+                    gap: 1em;
+                    a{
+                        width: 130px;
+                        text-align: center;
+                        padding: .5em .1em;
+                    }
+                }
+            }
+            p {
+                text-align: justify;
+            }
+            
         }
     }
 }
 
 @media only screen and (min-width:768px) and (max-width:992px) {
     .projects {
-        font-size: 1rem;
+        font-size: .9rem;
 
         &-container {
-            width: 90%;
             gap: 3em;
         }
 
         &__item {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            gap: .4em;
-            width: 100%;
-            height: 270px;
-            padding-bottom: 0;
-
-            &:hover {
-                background-color: #494d4e;
-            }
-
+            flex-direction: column;
+            
             img {
-                width: auto;
-                min-width: 370px;
-                max-width: 400px;
-                height: 270px;
+                width: 100%;
             }
-
-            .imgResponsive {
-                display: none;
-            }
-
-            .imgLargeScreen {
-                display: block;
-            }
-
-            &__information {
-                width: auto;
-                min-width: 300px;
-                max-width: 400px;
-                gap: .4em;
-
-                p {
-                    font-size: 1.2em;
-                }
-
-                &__btns {
+            &__information{
+                width: 100%;
+                gap: 1.2em;
+                &__btns{
+                    // flex-direction: column;
                     gap: 1em;
-
-                    a {
-                        font-size: 1em;
+                    a{
+                        width: 130px;
+                        text-align: center;
+                        padding: .5em .1em;
                     }
                 }
-
             }
+            p {
+                text-align: justify;
+            }
+            
         }
     }
 }
 
-@media only screen and (min-width:993px) {
-    .projects {
-        font-size: 1rem;
+// @media only screen and (min-width:993px) {
+//     .projects {
+//         font-size: 1rem;
 
-        &-container {
-            width: 80%;
-            gap: 3em;
-        }
+//         &-container {
+//             width: 80%;
+//             gap: 3em;
+//         }
 
-        h2 {
-            margin-bottom: 0;
-        }
+//         h2 {
+//             margin-bottom: 0;
+//         }
 
-        &__item {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            gap: 0;
-            width: 100%;
-            height: 340px;
-            padding-bottom: 0;
+//         &__item {
+//             display: flex;
+//             flex-direction: row;
+//             justify-content: center;
+//             align-items: center;
+//             gap: 0;
+//             width: 100%;
+//             height: 340px;
+//             padding-bottom: 0;
 
-            &:hover {
-                background-color: #494d4e;
-            }
+//             &:hover {
+//                 background-color: #494d4e;
+//             }
 
-            img {
-                width: 50%;
-                min-width: 450px;
-                height: 340px;
+//             img {
+//                 width: 50%;
+//                 min-width: 450px;
+//                 height: 340px;
 
-            }
+//             }
 
-            .imgResponsive {
-                display: none;
-            }
+//             .imgResponsive {
+//                 display: none;
+//             }
 
-            .imgLargeScreen {
-                display: block;
-            }
+//             .imgLargeScreen {
+//                 display: block;
+//             }
 
-            &__information {
-                width: 50%;
-                padding: 0 1.2em;
+//             &__information {
+//                 width: 50%;
+//                 padding: 0 1.2em;
 
-                p {
-                    font-size: 1.2em;
-                }
+//                 p {
+//                     font-size: 1.2em;
+//                 }
 
-                &__btns {
-                    gap: 1em;
+//                 &__btns {
+//                     gap: 1em;
 
-                    a {
-                        font-size: 1em;
-                    }
-                }
+//                     a {
+//                         font-size: 1em;
+//                     }
+//                 }
 
-            }
-        }
-    }
-}
+//             }
+//         }
+//     }
+// }
